# recognizer

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.xml  main.cpp  script.sh
include/: CArticle.h  CFileHolder.h  CNode.h  tgnews_mgr.h  tgparser.h  tgtypes.h  tools.h
source/: CArticle.cpp  CFileHolder.cpp  CNode.cpp  tgnews_mgr.cpp  tgparser.cpp  tools.cpp
